# edgeai-orangepi

./: .gitmodules  CMakeLists.txt  README.md  libloader.py  main.py  yolov8n_inference.py
include/: c_interface.h  camera.h  ctrl_motors.h  display_result.h  gpio_utils.h  ipc_elements.h  psig_utils.h  setup.h  stepper_demo.h  syspwm.h  wait_utils.h
models/: best_full_integer_quant.tflite
src/: c_interface.cpp  camera.cpp  ctrl_motors.c  display_result.cpp  gpio_utils.c  ipc_elements.c  psig_utils.c  setup.c  stepper_demo.c  syspwm.c  wait_utils.c
